<resources>
    <string name="app_name">Hope</string>
    <string name="title_activity_home">首页</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_filter">过滤</string>
    <string name="other">其他</string>
    <string name="share">分享</string>
    <string name="about">关于</string>
    <string name="title_activity_publish">发布</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="publish">发布</string>
    <string name="prompt_mobile">手机号</string>
    <string name="prompt_start">起点</string>
    <string name="prompt_end">终点</string>
    <string name="prompt_quota">座位</string>
    <string name="prompt_remark">备注</string>
</resources>
