<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/find_passenger"
            android:icon="@drawable/ic_menu_camera"
            android:title="车找人" />
        <!--<item-->
            <!--android:id="@+id/find_driver"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="人找车" />-->
        <item
            android:id="@+id/publish_driver"
            android:icon="@drawable/ic_menu_send"
            android:title="发布找人" />
        <!--<item-->
            <!--android:id="@+id/publish_passenger"-->
            <!--android:icon="@drawable/ic_menu_send"-->
            <!--android:title="发布找车" />-->
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
